# Robot-Architecture

./: 1_Helena_Setup.md  1_Helena_Setup.mdZone.Identifier  2_Aufteilung_und_Implementierung.md  2_Aufteilung_und_Implementierung.mdZone.Identifier  CMakeLists.txt  Readme.md  package.xml  plot_log.py  robot_status_log.csv  uhfiuqahwzte6qtwuqwiepoq
launch/: move_between.launch  wall_follower.launch  wall_follower_stage1.launch  wall_follower_stage4.launch
logs/: log_19_06_2026.csv  log_24_06_2026.csv  log_24_06_2026_190646.csv  log_24_06_2026_193904.csv  log_24_06_2026_194152.csv  log_24_06_2026_194521.csv  log_24_06_2026_194626.csv  log_24_06_2026_194718.csv  log_25_06_2026_140314.csv  log_25_06_2026_165313.csv  log_25_06_2026_165508.csv  log_25_06_2026_170456.csv  log_26_06_2026_183839.csv  log_26_06_2026_184013.csv
msg/: RobotStatus.msg
src/: camera_node.cpp  logger_node.cpp  move_between.cpp  status_publisher.cpp  wall_follower.cpp
worlds/: two_objects.world
