<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_control</name>
  <version>0.1.0</version>
  <description>Lab 04b - Robotersteuerung mit Turtlebot3</description>
  <maintainer email="eli@example.com">Eli</maintainer>
  <maintainer email="helena@example.com">Helena</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>roslib</depend>

  <!-- nur zur Laufzeit der Simulation nötig -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
</package>
